--- a/dmv-frontend/src/components/css/newUserForm.css
+++ b/dmv-frontend/src/components/css/newUserForm.css
@@ -11,19 +11,23 @@
     border-radius: 5px;
     background-color: #ffffff;
     font-family: 'Roboto', sans-serif;
+    color: #313131 !important;
     
 }
 
 .new-user-form input{
+    color: #313131 !important;
     margin: 10px;
     padding: 15px;
     border: none;
     border-radius: 25px;
     width: 50%;
     background-color: #dddddd;
+
 }
 
 .new-user-form button{
+    color: #313131 !important;
     margin: 10px;
     padding: 10px;
     border: 1px solid #dddddd;
