--- a/dmv-frontend/src/index.css
+++ b/dmv-frontend/src/index.css
@@ -3,15 +3,26 @@
   line-height: 1.5;
   font-weight: 400;
 
+
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+html{
+  margin: 0;
+  padding: 0;
+}
+
+#root{
+  margin: 0;
+  padding: 0;
 }
 
 a {
