--- a/dmv-frontend/src/components/css/dashboard.css
+++ b/dmv-frontend/src/components/css/dashboard.css
@@ -70,7 +70,8 @@ th, td {
 
 .clients{
     height: 85vh;
-    margin: 35px;
+    margin-top: 10px !important;
+    margin: 30px;
     max-width: 100vw;
     overflow-x: scroll;
     overflow-y: scroll;
@@ -107,19 +108,20 @@ th, td {
 .clients td{
     font-size: 15px;
     font-weight: 500;
-    padding: 20px;
+    padding-top: 20px;
     /* make it sticky */
 }
 
 .clients thead tr:first-child th {
     position: sticky;
+    
     top: 0;
 }
 
 .action-buttons p{
     background-color: transparent;
     padding: 0px;
-    margin: 0px 0px 0px 15px;
+    margin: 0px 15px 0px 0px;
     cursor: pointer;
     /* margin-right: 15px; */
 }
@@ -178,5 +180,33 @@ td {
 
 .jobs tr:hover {
     background-color: #f5f5f5;
+}
+
+/* searchbox */
+
+.searchBar{
+    /* margin: 35px; */
+    margin-left: 35px;
+    max-width: 100vw;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.searchBar input{
+    /* width: 100%; */
+    height: 20px;
+    width: 400px;
+    border-radius: 15px;
+    border: 2px solid #aaaaaa;
+    padding: 10px;
+    padding-left: 15px;
+    font-size: 16px;
+    background-color: #dfdfdf;
+    color: #000000; 
 }
 
