--- a/dmv-frontend/src/App.css
+++ b/dmv-frontend/src/App.css
@@ -27,3 +27,93 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.status-pending {
+  background-color: rgb(234, 154, 14);
+  color: white;
+  text-align: center;
+  border-radius: 15px;
+}
+
+.status-pending p{
+  margin: 5px;
+}
+
+.status-completed {
+  background-color: rgb(0, 191, 0);
+  color: white;
+  text-align: center;
+  border-radius: 15px;
+}
+
+.status-completed p{
+  margin: 5px;
+}
+
+th{
+  cursor: pointer;
+}
+
+.job-details{
+  padding: 50px;
+}
+
+#job-note{
+  width: 100%;
+  height: auto;
+  margin: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #aaaaaa;
+  background-color: #dfdfdf;
+  color: #1f0d0d;
+  font-size: 15px;
+}
+
+#job-note p:nth-child(2) {
+  /* font-weight: 900; */
+  font-size: 13px;
+  color: #7c7c7c;
+  margin: 2px;
+}
+
+#job-note p:nth-child(3) {
+  /* font-weight: 900; */
+  font-size: 13px;
+  color: #7c7c7c;
+  margin: 2px;
+}
+
+.job-details form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.job-details textarea{
+  width: 100%;
+  height: 100px;
+  margin: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #aaaaaa;
+  background-color: #dfdfdf;
+  color: #1f0d0d;
+  font-size: 15px;
+}
+
+.job-details input{
+  width: 100%;
+  width: 300px;
+  /* height: 30px; */
+  margin: 15px;
+  padding: 15px;
+  border-radius: 5px;
+  border: 1px solid #aaaaaa;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 15px;
+}
+
